Трансформация исходных масок к формату COCO

--- a/mask_conversion.ipynb
+++ b/mask_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +79,8 @@
     "                annotation_id += 1\n",
     "    return coco\n",
     "\n",
-    "# Пример использовани\n",
-    "\n",
-    "\n",
-    "# Пример использования\n",
-    "image_dir = \"C:/Users/nadyl/Downloads/train_dataset/cv_open_dataset/open_img\"\n",
-    "mask_dir = \"C:/Users/nadyl/Downloads/train_dataset/cv_open_dataset/open_msk\"\n",
+    "image_dir = \"cv_open_dataset/open_img\"\n",
+    "mask_dir = \"cv_open_dataset/open_msk\"\n",
     "output_path = \"annotations.json\"\n",
     "coco_annotations = create_coco_annotations(image_dir, mask_dir)\n",
     "with open(output_path, \"w\") as f:\n",
